# candi-date

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.md  README-v1.md  README-web3.md  README.md  TODO.md  _b00t_.bashrc  bidirection-lstm.ipynb  brianstorming.md  build.sh  c0de-RUST.md  contribute.md  debug.sh  install.md  install.sh  jargon.md  n00b.md  package-lock.json  package.json  spiderme.txt  techstack.md
.devcontainer/: devcontainer.json
.github/workflows/: build.sample  rust.yml
_b00t_/: README.md  _b00t_.bashrc  install-_b00t_-rust.🦀.sh
_b00t_/aws.🦉/: README-aws.md  _b00t_.sh
_b00t_/bash.🔨/: README.md  crudini.sh  init.10级.🥾.b00t.sh  init.20级.🐧.linux.sh  init.22级.🐙.git.sh  init.30级.🐳.层.docker.sh  init.40级.🦀语.rust.sh  init.41级.🐍.语.python.sh  init.42级.🚀.语.node.sh  init.42级.🦄.语.typescript.sh  init.44级.🏇.语.go.sh  is_docker.sh  is_inside_docker.sh
_b00t_/python.🐍/: init.sh
_b00t_/r3src_资源/: projectid.sh
_b00t_/rust.🦀/: init.sh
app/: asciinema.sh
app/gh__github-cli__⚡🐙/: install.sh
app/nixos__❄️🥷/: README.md  install.sh
app/vscode__💙🆚/: README.md  extensions.txt  install.sh
candib0t/: pyproject.toml
candib0t-v1/: pyproject.toml  start.sh
candib0t/tests/: test_discord.py
docs/: README-k8s.md  README-podman.md  README-rust.md  solidity.md
notes/: agent.md  journal.md  pretty.md  tokenomics.md
notes/_archive/: epochs.md  fees.md  hasErr.md  pretty.md  seekErr.md
os/podman__💌🐋/: issues.md
os/spack__🧳🐍/: README.md  bashrc.sh  install.sh
src/: main  main.rs
sugar/: tokenomics.md
sugar/acrobat.pdf__🍬📃/: README.md
(+2 files in other folders)
