[package]
name = "candi-date"
description = "submodules & setup for candi-date"
version = "0.1.0"
edition = "2021"
homepage = "http://candi-date.me"
repository = "https://github.com/elasticdotventures/candi-date"
keywords = [
    "bugreport",
    "diagnostics",
    "cross-platform",
    "cli",
    "terminal"
]
license = "Elastic-V2"
authors = ["Brian Horakh <b@elastic.ventures>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["collector_operating_system", "git_hash", "format_markdown"]

collector_operating_system = ["sys-info"]

git_hash = ["git-version"]

format_markdown = []
format_plaintext = []

[dependencies]
sys-info = { version = "0.9", optional = true }
git-version = { version = "0.3", optional = true }
shell-escape = "0.1"
bugreport = "0.5"

[dev-dependencies]
pretty_assertions = "1.1.0"
tempfile = "3.3.0"